fixed up some alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -723,3 +723,22 @@ display: none;
 }
 
 
+.login-header {
+
+  margin-top: 5px;;
+
+
+}
+
+.red-text {
+
+color: rgb(238, 148, 142);
+
+}
+
+.row{
+  width:100%;
+  margin:0;
+  padding:0;
+  display:flex;
+}
